force-app/main/default/objects/cgcloud__BO_API_Workflow_Workflow_Step__c/cgcloud__BO_API_Workflow_Workflow_Step__c.object-meta.xml
<CustomObject>
    <description>This table holds the junction object to identify which workflow steps apply to each workflow.</description>
    <label>Business Object API WF - Workflow Step</label>
    <nameField>
        <displayFormat>WWS-{000}</displayFormat>
        <label>Business Object API WF - WF Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Object API WF - Workflow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>