force-app/main/default/objects/cgcloud__BO_API_Workflow_Workflow_Step__c/fields/cgcloud__BO_API_Workflow_Step__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__BO_API_Workflow_Step__c</fullName>
    <description>Reference to the business object API workflow step.</description>
    <label>Business Object API Workflow Step</label>
    <referenceTo>cgcloud__BO_API_Workflow_Step__c</referenceTo>
    <relationshipLabel>Workflow Steps</relationshipLabel>
    <relationshipName>BO_API_WF_Workflow_Steps</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>