force-app/main/default/objects/cgcloud__BO_API_Workflow_Workflow_Step__c/fields/cgcloud__Enabled__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the Step is enabled to be applied or not.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>