force-app/main/default/objects/cgcloud__BO_API_Workflow_Workflow_Step__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Defines the order in which the Step will be applied. Steps are executed in ascending order.</description>
    <inlineHelpText>Defines the order in which the step is applied.</inlineHelpText>
    <label>Sort</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>