force-app/main/default/objects/cgcloud__BO_API_Workflow_Workflow_Step__c/fields/cgcloud__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Key__c</fullName>
    <description>Field used to keep schema constraints. Technical field updated by workflow.</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>103</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>