force-app/main/default/objects/cgcloud__BO_API_Workflow_Workflow_Step__c/fields/cgcloud__Unique_Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Sort__c</fullName>
    <description>Technical Field updated by workflow.</description>
    <externalId>true</externalId>
    <label>Unique Sort</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>